--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,13 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.app.json",
                         "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["src/styles.css"],
+                        "styles": [
+                            "src/styles.css",
+                            "src/vnzla-material.css",
+                            "node_modules/primeicons/primeicons.css",
+                            "node_modules/primeng/resources/themes/vela-blue/theme.css",
+                            "node_modules/primeng/resources/primeng.min.css"
+                        ],
                         "scripts": []
                     },
                     "configurations": {
